feature: live web list update
